*CVS*

* Added acts_as_list that can decorates an existing class with methods like move_higher/lower, move_to_top/bottom. [Tobias Luetke] Example:

    class TodoItem < ActiveRecord::Base
      acts_as_list :scope => :todo_list_id
      belongs_to :todo_list
    end

* Added acts_as_tree that can decorates an existing class with a many to many relationship with itself. Perfect for categories in 
  categories and the likes. [Tobias Luetke]

* Added that Active Records will automatically record creation and/or update timestamps of database objects if fields of the names 
  created_at/created_on or updated_at/updated_on are present. [Tobias Luetke]

* Added Base.default_error_messages as a hash of all the error messages used in the validates_*_of so they can be changed in one place [Tobias Luetke]

* Added automatic transaction block around AssociationCollection.<<, AssociationCollection.delete, and AssociationCollection.destroy_all

* Fixed that Base#find will return an array if given an array -- regardless of the number of elements #270 [Marten]

* Fixed that has_and_belongs_to_many would generate bad sql when naming conventions differed from using vanilla "id" everywhere [RedTerror]

* Added a better exception for when a type column is used in a table without the intention of triggering single-table inheritance. Example:

    ActiveRecord::SubclassNotFound: The single-table inheritance mechanism failed to locate the subclass: 'bad_class!'.
    This error is raised because the column 'type' is reserved for storing the class in case of inheritance. 
    Please rename this column if you didn't intend it to be used for storing the inheritance class or 
    overwrite Company.inheritance_column to use another column for that information.

* Added that single-table inheritance will only kick in if the inheritance_column (by default "type") is present. Otherwise, inheritance won't
  have any magic side effects.
